full text search well-done!!!

--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -45,8 +45,15 @@
                 <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
             </form>
         </div>
-    
 
+
+        {% if request.GET.q %}
+            <h3 class="mt-4">Результаты посика по запросу {{ request.GET.q }}</h3>
+        {% if not goods %}
+            <link rel="stylesheet" href="{% static 'deps/css/my_footer_css.css' %}">
+            <h2 class="mt-4">По запросу ничего не найдено</h2>
+        {% endif %}
+        {% endif %}
         {% for product in goods %}
             <!-- Карта товара -->
             <div class="col-lg-4 col-md-6 p-4">
@@ -58,10 +65,26 @@
                     {% endif %}
                     <div class="card-body">
                         <a href="{% url "catalog:product" product.slug %}">
-                            <p class="card-title">{{ product.name }}</p>
+                            <p class="card-title">
+                            {% autoescape off %}
+                                {% if product.headline %}
+                                    {{ product.headline }}
+                                {% else %}
+                                    {{ product.name }}
+                                {% endif %}
+                            {% endautoescape %}
+                            </p>
                         </a>
 {#                        Обрезка описания с помощью Джанго#}
-                        <p class="card-text">{{ product.description|truncatechars:35 }}</p>
+                        <p class="card-text">
+                            {% autoescape off %}
+                                {% if product.headline %}
+                                    {{ product.bodyline|truncatechars:100 }}
+                                {% else %}
+                                    {{ product.description|truncatechars:35 }}
+                                {% endif %}
+                            {% endautoescape %}
+                        </p>
                         <p class="product_id">id: {{ product.display_id }}</p>
                         <div class="d-flex justify-content-between">
                             {% if product.discount %}
@@ -84,7 +107,8 @@
 
     </div>
     <!-- Пагинация -->
-    <nav aria-label="Page navigation example">
+    {% if goods %}
+        <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4">
             <div class="custom-shadow d-flex">
             
@@ -105,6 +129,7 @@
             </div>
         </ul>
     </nav>
+    {% endif %}
 {% endblock %}
 
 
