--- a/app/users/templates/users/registration.html
+++ b/app/users/templates/users/registration.html
@@ -7,37 +7,68 @@
         <div class="row justify-content-center">
             <div class="col-md-9 bg-white p-4 mb-5 mx-2 rounded custom-shadow">
                 <h2 class="text-center mb-4">Регистрация</h2>
-                <form>
+                <form action="{% url 'user:registration' %}" method="post">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="firstName" class="form-label">Имя*</label>
-                            <input type="text" class="form-control" id="firstName"
+                            <label for="id_first_name" class="form-label">Имя*</label>
+                            <input type="text" class="form-control" id="id_first_name"
+                                name="first_name"
+                                value="{% if not form.first_name %}{{ form.first_name.value }}{% endif %}"
                                 placeholder="Введите ваше имя" required>
+                                {% if form.first_name.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
+                                {% endif %}
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="lastName" class="form-label">Фамилия*</label>
-                            <input type="text" class="form-control" id="lastName"
+                            <label for="id_last_name" class="form-label">Фамилия*</label>
+                            <input type="text" class="form-control" id="id_last_name" 
+                                name="last_name"
+                                value="{% if not form.last_name %}{{ form.last_name.value }}{% endif %}"
                                 placeholder="Введите вашу фамилию" required>
+                                {% if form.last_name.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>
+                                {% endif %}
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="username" class="form-label">Имя пользователя*</label>
-                            <input type="text" class="form-control" id="username"
+                            <label for="id_username" class="form-label">Имя пользователя*</label>
+                            <input type="text" class="form-control" id="id_username"
+                                name="username"
+                                value="{% if not form.username %}{{ form.username.value }}{% endif %}"
                                 placeholder="Введите ваше имя пользователя" required>
+                                {% if form.username.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>
+                                {% endif %}
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="email" class="form-label">Email*</label>
-                            <input type="email" class="form-control" id="email"
+                            <label for="id_email" class="form-label">Email*</label>
+                            <input type="email" class="form-control" id="id_email"
+                                name="email"
+                                value="{% if not form.email %}{{ form.email.value }}{% endif %}"
                                 placeholder="Введите ваш email" required>
+                                {% if form.email.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>
+                                {% endif %}
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="password1" class="form-label">Пароль*</label>
-                            <input type="password" class="form-control" id="password1"
+                            <label for="id_password1" class="form-label">Пароль*</label>
+                            <input type="password" class="form-control" id="id_password1"
+                                name="password1"
+                                value="{% if not form.password1 %}{{ form.password1.value }}{% endif %}"
                                 placeholder="Введите пароль" required>
+                                {% if form.password1.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.password1.errors }}</div>
+                                {% endif %}
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="password2" class="form-label">Подтверждение пароля*</label>
-                            <input type="password" class="form-control" id="password2"
+                            <label for="id_password2" class="form-label">Подтверждение пароля*</label>
+                            <input type="password" class="form-control" id="id_password2"
+                                name="password2"
+                                value="{% if not form.password2 %}{{ form.password2.value }}{% endif %}"
                                 placeholder="Подтвердите пароль" required>
+                                {% if form.password2.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.password2.errors }}</div>
+                                {% endif %}
                         </div>
                     </div>
                     <button type="submit"
