--- a/app/templates/includes/cart_button.html
+++ b/app/templates/includes/cart_button.html
@@ -27,10 +27,12 @@
                     {% include 'carts/includes/included_cart.html' %}
                     <!-- Закончилась разметка корзины -->
                 </div>
-                <a class="btn btn-dark" href="orders/create_order.html">
+                {% if carts %}
+                    <a class="btn btn-dark" href="orders/create_order.html">
                     Оформить заказ
-                </a>
+                    </a>
+                {% endif %} 
             </div>
-        </div> 
+        </div>
     </div>
 </div>
