--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -24,7 +24,7 @@
                     <button type="submit" class="btn btn-dark btn-block">Войти</button>
                 </form>
                 <div class="mt-3">
-                    <a href="#">Забыли пароль?</a> | <a href="{% url 'user:registration' %}">Создать аккаунт</a>
+                    <a href="{% url 'users:forgot-pass' %}">Забыли пароль?</a> | <a href="{% url 'user:registration' %}">Создать аккаунт</a>
                 </div>
                 <hr>
                 <div class="text-center">
