Added 2FA with email

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -75,7 +75,9 @@
                         <div class="col-md-12 mb-3">
                             <label for="id_two_factor" class="form-label">Two-factor authentication (2FA)</label>
                             <p>
-                                <a href="{% url 'users:two_fa' %}" class="btn btn-dark">Подключить</a>
+                                <form action="{% url 'users:confirmation' %}" method="get">
+                                    <button class="btn btn-dark">Подключить</button>
+                                </form>
                             </p>
                         </div>
                     {% else %}
