--- a/users/templates/users/confirmation.html
+++ b/users/templates/users/confirmation.html
@@ -7,14 +7,14 @@
         <div class="row justify-content-center">
             <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                 <h2 class="text-center mb-4">Подтверждение</h2>
-                <form action="{% url 'users:profile' %}" method="post">
+                <form action="{% url 'users:confirmation' %}" method="post">
                     {% csrf_token %}
                     {% if request.GET.next %}
                         <input type="hidden" name="next" value={{ request.GET.next }}>
                     {% endif %}
                     <div class="mb-3">
                         <label for="id_code" class="form-label">Введите код</label>
-                        <input type="text" class="form-control" name="username" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" id="id_code" placeholder="Введите код, который мы отправили вам на почту." required>
+                        <input type="text" class="form-control" name="code" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" id="id_code" placeholder="Введите код, который мы отправили вам на почту." required>
                     </div>
                     <button type="submit" class="btn btn-dark btn-block">Подтвердить код</button>
                 </form>
