--- a/users/templates/users/forgot_pass.html
+++ b/users/templates/users/forgot_pass.html
@@ -7,14 +7,14 @@
         <div class="row justify-content-center">
             <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                 <h2 class="text-center mb-4">Забыли пароль</h2>
-                <form action="{% url 'user:confirmation' %}" method="post">
+                <form action="{% url 'users:forgot-pass' %}" method="post">
                     {% csrf_token %}
                     {% if request.GET.next %}
                         <input type="hidden" name="next" value={{ request.GET.next }}>
                     {% endif %}
                     <div class="mb-3">
-                        <label for="id_username" class="form-label">Email</label>
-                        <input type="text" class="form-control" name="username" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" id="id_username" placeholder="Введите ваш адрес электонной почты" required>
+                        <label for="id_email" class="form-label">Email</label>
+                        <input type="text" class="form-control" name="email" value="{% if form.email.value %}{{ form.email.value }}{% endif %}" id="id_email" placeholder="Введите ваш адрес электонной почты" required>
                     </div>
                     <button type="submit" class="btn btn-dark btn-block">Отправить письмо</button>
                 </form>
